2010-06-16  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: use chmod a-x instead of chmod -x

2010-06-16  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: remove comment from Makefile rule

2010-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.pl: Don't call check_data_path for a FILE-WRITE.

2010-06-16  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: add chmod -x for more recent Test::Harness
	  implementations that are confused by executable tests

2010-06-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm, perl/Amanda/Report/human.pm: 'FAIL planner'
	  line should result in FAILED dump (not MISSING dump).
	* installcheck/amreport.pl: Test it.

2010-06-12  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Report.pm: POD overhaul

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader-test.c: don't expect partnum=0 on dumpfiles
	* common-src/fileheader.c: don't put partnum=1 on tape headers, etc.

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader.c: fix inaccurate partnum in such headers
	* installcheck/Amanda_Recovery_Clerk.pl: add test for recovering with
	  DUMPFILE headers

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c: add S3_STORAGE_CLASS property
	* device-src/s3.c device-src/s3.h: add storage_class
	* installcheck/Amanda_Device.pl: set the property
	* man/xml-source/amanda-devices.7.xml: document it

2010-06-10  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Recovery/Planner.pm: fix matching on filelists - fixes
	  problems with amidxtaped: "Specified file list matches multiple
	  dumps"

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Set dump_failed and dump_strange flags.
	* server-src/amreport.pl: Add STRANGE or MISSING to email subject.
	* installcheck/Amanda_Report.pl: Test new flags.
